Steps wrapping and about us articles fixed

--- a/src/components/home/about-us-brief/about-us-brief.module.css
+++ b/src/components/home/about-us-brief/about-us-brief.module.css
@@ -1,6 +1,6 @@
 .container {
     color: #444;
-    margin-bottom: 5em;
+    margin: 4em 0;
     padding: 0 2em;
 }
 
