--- a/src/components/home/hero-section/hero-section.module.css
+++ b/src/components/home/hero-section/hero-section.module.css
@@ -1,7 +1,6 @@
 .container {
     min-height: 90dvh;
     overflow: hidden;
-    margin-bottom: 3em;
 }
 
 .bgVideo {
