--- a/src/components/home/steps/steps.module.css
+++ b/src/components/home/steps/steps.module.css
@@ -1,10 +1,8 @@
 .container {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     justify-content: flex-start;
     align-items: center;
-    margin-top: 2em;
 }
 
 .step {
@@ -31,18 +29,18 @@
 }
 
 @media (min-width: 768px) {
-    .container {
-        flex-direction: row;
-        justify-content: center;
-        align-items: flex-start;
-    }
-
     .step3 {
         padding-top: 0;
     }
 }
 
 @media (min-width: 1200px) {
+    .container {
+        flex-direction: row;
+        justify-content: center;
+        align-items: flex-start;
+    }
+
     .step2 {
         padding-top: 5em;
     }
